[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = { version = "0.22", features = ["dates"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono"]}
dotenvy = "0.15" # For loading DATABASE_URL from .env
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
num-traits = "0.2"
chrono = "0.4.42"
